# prototrader-finance

./: .gitignore  LICENSE  README.md  __init__.py  dashboard.py  protoagent.plugin.yaml  pyproject.toml  requirements.txt
.github/workflows/: test.yml
backtest/: __init__.py  engine.py  tools.py
behavioral/: __init__.py  engine.py  tools.py
broker/: __init__.py  broker_mandate.example.yaml  engine.py  tools.py
data/: __init__.py  tools.py
desk/: __init__.py  subagents.py
factors/: __init__.py  engine.py  tools.py
skills/backtest-a-strategy/: SKILL.md
skills/evaluate-a-factor/: SKILL.md
skills/place-a-paper-trade/: SKILL.md
skills/research-a-ticker/: SKILL.md
skills/shadow-account/: SKILL.md
tests/: test_backtest_engine.py  test_behavioral.py  test_broker.py  test_factors.py
workflows/: investment-committee.yaml  quant-desk.yaml
