[project]
name = "prototrader-finance"
version = "0.1.0"
description = "protoTrader Finance — a full-bundle protoAgent plugin (market data, backtest, factors, behavioral, gated paper broker, the research desk, workflows, and a Quant Desk dashboard view)"
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
# Mirrors the protoAgent host's policy: pyflakes (F) catches the real bugs;
# the stylistic rules the codebase intentionally uses are ignored rather than
# churned — late/lazy imports (E402), long readable lines (E501),
# semicolon/lambda style (E702/E731), occasional ambiguous names (E741).
select = ["E", "F", "W"]
ignore = ["E402", "E501", "E702", "E731", "E741"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]
